[package]
name = "miniscript-js"
version = "0.1.0"
authors = ["nijynot <nijynot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.50", features = ["serde-serialize"] }
secp256k1 = "0.15.5"
miniscript = { version = "0.10.0", features = ["compiler"] }
bitcoin = "0.20.0"
js-sys = "0.3.27"
serde = "^1.0.59"
serde_derive = "^1.0.59"
